# blured

./: .gitignore  Cargo.toml  README.md  build.rs
.helix/: config.toml
example_config/: custom_effect.toml  defaults.toml  slideshow.toml
example_config/shader/: dotted.wgsl
shader/: blank.wgsl  blur.wgsl  neuro.wgsl  scene.wgsl  wip.wgsl
shaders/: Cargo.toml
shaders/src/: blank.rs  common.rs  effect.rs  gear.rs  jumping.rs  lib.rs  raymarch.rs  raymarcher_template.rs  scene.rs
src/: lib.rs  main.rs  scene_desc.rs
src/service/: application.rs  config.rs  mod.rs  wlclient.rs
src/service/config/: color.rs  mod.rs  params.rs
src/service/renderer/: buffer.rs  camera.rs  image_scene.rs  mod.rs  pipelines.rs  renderer_impl.rs  texture.rs
src/service/socket_server/: mod.rs
wgsl_shader/: blur.wgsl  koch.wgsl  wip.wgsl
