[package]
name = "blured"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ctrlc = { version = "3.5.2", features = ["termination"] }
keep = { git = "https://github.com/rboeni2s/keep.git", version = "0.1.0" }
log = "0.4.29"
plug = { git = "https://github.com/rboeni2s/keep.git", version = "0.1.0" }
pollster = "0.4.0"
raw-window-handle = "0.6.2"
tempfile = "3.27.0"
wayland-client = { version = "0.31.13", features = ["log", "system"] }
wayland-protocols = "0.32.11"
wayland-protocols-wlr = { version = "0.3.11", features = ["client"] }
wgpu = "29.0.0"
