[package]
name = "blured-shaders"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spirv-std = { git = "https://github.com/rust-gpu/rust-gpu", features = ["bytemuck"] }
glam = { version = "0.30.10", default-features = false }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(target_arch, values("spirv"))'] }
